syntax = "proto3";

package messages.v1;

// Information about a device's network and system identification
message DeviceInfoProto {
  // The version of the Synapse runtime
  string version = 1;

  // The device's hostname
  string hostname = 2;

  // The IP address of the device
  string ip = 3;

  // The platform or operating system (e.g., "linux", "windows")
  string platform = 4;

  // List of network interfaces available on the device
  repeated string network_interfaces = 5;
}

// Message to set the connection information for a device
message SetConnectionInfoProto {
  bool connected_to_networktables = 1; // Indicates if the device is connected to NetworkTables
}

// Metrics related to the hardware status of a device
message HardwareMetricsProto {
  // CPU temperature in degrees Celsius
  float cpu_temp = 1;

  // CPU usage as a percentage (0 to 100)
  float cpu_usage = 2;

  // Disk usage as a percentage (0 to 100)
  float disk_usage = 3;

  // RAM usage
  float ram_usage = 4;

  // Total memory available
  float memory = 5;

  // Uptime of the device in seconds
  float uptime = 6;

  // Timestamp when the metrics were last fetched (ISO 8601 or other format)
  string last_fetched = 7;
}

// Message to set network settings on a device
message SetNetworkSettingsProto {
  string hostname = 1; // The hostname to set for the device
  string ip = 2; // The IP address to set for the device
  string network_interface = 3; // The network interface to configure
  string network_table = 4; // The network table to use for configuration
  uint32 team_number = 5; // The team number for network configuration
}
